fix: prevent long create job dialogue when browsing large directories by setting file browser body max height and overflow properties

--- a/client/src/components/modules/file-browser/file-browser.scss
+++ b/client/src/components/modules/file-browser/file-browser.scss
@@ -16,6 +16,8 @@
 
 	.file-browser-body {
 		padding: 1rem;
+		max-height: 25rem;
+		overflow-y: scroll;
 
 		.directory-item {
 			width: 100%;
